--- a/app/src/main/res/layout/content_form_yacht_aset.xml
+++ b/app/src/main/res/layout/content_form_yacht_aset.xml
@@ -891,7 +891,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/xmin_padding"
-                        android:padding="@dimen/xmin_padding">
+                        android:padding="@dimen/xmin_padding"
+                        android:visibility="gone">
 
                         <CheckBox
                             android:id="@+id/as_ck_assurance"
