--- a/app/src/main/res/layout/content_withdrawal.xml
+++ b/app/src/main/res/layout/content_withdrawal.xml
@@ -121,7 +121,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Note : status pengajuan withdrawal dapat dilihat pada riwayat withdrawal "
-                android:textColor="@color/colorGrey" />
+                android:textColor="@color/colorGrey"
+                android:textSize="@dimen/almost_tiny_text"/>
 
 
         </LinearLayout>
