--- a/app/src/main/res/layout/content_form_default_aset.xml
+++ b/app/src/main/res/layout/content_form_default_aset.xml
@@ -523,7 +523,8 @@
                         android:layout_height="match_parent"
                         android:layout_marginBottom="@dimen/xmin_padding"
                         android:orientation="vertical"
-                        android:padding="@dimen/xmin_padding">
+                        android:padding="@dimen/xmin_padding"
+                        android:visibility="gone">
 
                         <TextView
                             android:layout_width="match_parent"
