--- a/app/src/main/res/layout/content_form_feature.xml
+++ b/app/src/main/res/layout/content_form_feature.xml
@@ -45,7 +45,23 @@
                     android:hint="Nama"
                     android:imeOptions="actionNext"
                     android:inputType="textPersonName"
-                    android:padding="@dimen/min_padding" />
+                    android:padding="@dimen/min_padding"
+                    android:visibility="gone"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/colorNearWhite"
+                    android:orientation="vertical"
+                    android:padding="@dimen/xmin_padding">
+
+                    <Spinner
+                        android:id="@+id/fr_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="@dimen/xmin_padding"
+                        android:spinnerMode="dialog" />
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
