--- a/app/src/main/res/layout/content_form_voucher.xml
+++ b/app/src/main/res/layout/content_form_voucher.xml
@@ -373,7 +373,7 @@
                             android:background="@color/colorNearWhite"
                             android:ems="10"
                             android:gravity="start"
-                            android:hint="Deskripso Kupon"
+                            android:hint="Deskripsi Kupon"
                             android:inputType="textMultiLine|textCapSentences"
                             android:lines="3"
                             android:padding="@dimen/min_padding" />
